# RogueMagicBox

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .rogueignore  CI_CD_SUMMARY.md  CMakeLists.txt  Dockerfile  MISSION_ACCOMPLIE.md  PRESENTATION_DEFI.md  RAPPORT_VALIDATION.md  README.md  sonar-project.properties
.github/workflows/: ci-cd-complete.yml  ci-minimal.yml.disabled  ci.yml.disabled  release.yml
config/: rogue.toml
docs/: CHANGELOG.md  CI_CD.md  CONVERSATION_LOG.md  DEFI_CICD.md  DEMO_SCENARIO.md  DOCUMENTATION_COMPLETE.md  INDEX.md  PROOF_OF_WORK.md  README.md  SONARCLOUD_SETUP.md  USAGE.md  USER_GUIDE.md
include/rogue/: commands.hpp  logfmt.hpp  rogue.hpp
scripts/: check_sonarcloud_setup.ps1  check_sonarcloud_setup.sh  demo_local.sh  install_linux.sh  install_windows.ps1  run_e2e_tests.ps1  run_e2e_tests.sh
src/: main.cpp
src/cli/: args.hpp  commands_init.cpp  commands_push.cpp  commands_scan.cpp
src/core/: config.cpp  config.hpp  github_api.cpp  github_api.hpp  gitops.cpp  gitops.hpp  logger.cpp  logger.hpp  scanner.cpp  scanner.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  test_config.cpp  test_gitops.cpp  test_main.cpp  test_scanner.cpp
